@@ -273,6 +273,11 @@ if (WITH_BLUETOOTH_RF_SEARCHING)
     set (BLUETOOTH_RF_SEARCHING ON)
 endif (WITH_BLUETOOTH_RF_SEARCHING)
 
+OPTION(WITH_USB "Native USB support" ON)
+if (WITH_USB)
+    find_package (LibUSB)
+endif (WITH_USB)
+
 OPTION(WITH_IRDA "IrDA support" ON)
 if (WITH_IRDA)
     if (WIN32 AND NOT CYGWIN)
