@@ -70,6 +70,9 @@ set (LIBRARY_SRC
 if (BLUEZ_FOUND)
     list (APPEND LIBRARY_SRC device/bluetoth/bluez.c)
 endif (BLUEZ_FOUND)
+if (LIBUSB_FOUND)
+    list (APPEND LIBRARY_SRC device/usb/usb.c)
+endif (LIBUSB_FOUND)
 if (FBSD_BLUE_FOUND)
     list (APPEND LIBRARY_SRC device/bluetoth/blue_fbsd.c)
 endif (FBSD_BLUE_FOUND)
@@ -105,6 +108,11 @@ if (BLUEZ_FOUND)
     target_link_libraries (libGammu ${BLUEZ_LIBRARIES})
     include_directories (${BLUEZ_INCLUDE_DIR})
 endif (BLUEZ_FOUND)
+
+if (LIBUSB_FOUND)
+    target_link_libraries (libGammu ${LIBUSB_LIBRARIES})
+    include_directories (${LIBUSB_INCLUDE_DIR})
+endif (LIBUSB_FOUND)
 
 if (FBSD_BLUE_FOUND)
     target_link_libraries (libGammu ${FBSD_BLUE_LIBRARIES})
