@@ -35,6 +35,8 @@ For Nokia cables you want to use one of following:
 
 \fBfbus\fR           - serial FBUS connection
 .br
+\fBfbususb\fR        - FBUS over USB cable (experimental)
+.br
 \fBdlr3\fR           - DLR-3 and compatible cables
 .br
 \fBdku2\fR           - DKU-2 and compatible cables
