@@ -26,6 +26,7 @@ ChangeLog
 [-] * Fix possible crash in LMB decoder.
 [-] * Avoid string length overflow in Nokia phonebook encoder.
 [-] * Introduced backward compatibility of gammu.StateMachine.SetConfig.
+[-] * Started implementation of dku-2 userspace driver using libusb-1.0.
     
 20090126 - 1.22.92
 
